Sun Feb 24 02:40:42 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: changed python detection script so you can
	specify a diferent python binary. Patch from Gergely Nagy.

Sat Feb 23 22:32:59 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: added descriptions for latest features.
	* doc/C/figures/main-window.png: updated.

Fri Feb 22 15:49:48 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Updated again. :)

Fri Feb 22 08:28:12 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Updated translations.

	* src/window.c: Applied patch from Vashti.

Thu Feb 21 15:43:46 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: corrected a few typos.

Thu Feb 21 14:55:39 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated.

	* src/data.c: removed duplicate libintl.h includes.
	* src/init.c: likewise.
	* src/modules.c: likewise.
	* src/modules_api.c: likewise.
	* src/net.c: likewise.
	* src/prefs.c: likewise.

	* src/init.c: added a few missing gettext calls.
	* src/log.c: added gettext calls to translatable strings.

	* po/POTFILES.in: added src/log.c.

	* po/ca.po, po/es.po: Updated translations.
	* po/de.po, po/fr.po, po/sv.po: update-po.

Mon Feb 18 12:16:41 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added 2 new patches from Vashti, one adds a reconnect feature.
	and the other fix for aliases.

	* ROADMAP: Moved around.

Wed Feb 13 07:25:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS, ROADMAP: Fixed nested alias.

	* src/log.c: Changed the includes a bit.

	* src/net.c (heck_aliases): Rewritten, now returns void
	(action_send_to_connection): Now uses a GString internally.

Tue Feb 12 07:51:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added patch from Vashti which fixes blackbold bug.

	* AUTHORS: Added more information on Vashti
	* ROADMAP: Added new idea

	* src/gnome-mud.h (system_data): BoldForeGround added.